Bug 1853144 - Fix registry cleanup for the Default Agent during uninstall. r=bytesized

This change makes the Default Agent proxy wait for the Default Agent background task to exit before itself exiting.

Additionally this moves the call to run the Default Agent uninstaller earlier to ensure firefox.exe still exists.

Differential Revision: https://phabricator.services.mozilla.com/D188396